# ppmdc

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/ppmdc/: __init__.py  _cppm.c  arithmetic.py  cli.py  codec.py  fasta.py  model.py
tests/: test_codec.py
